# control-panels

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
centre-module/: CMakeLists.txt  README.md  component.toml  config.toml  deploy.sh  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
centre-module/include/: AnalogueInput.h  Components.h  DigitalInput.h  FightStick.h  GamepadEnums.h  GamepadState.h  Systems.h  TinyUSBCallbacks.h  TinyUSBConfig.h  TinyUSBDescriptors.h  digital_switch.h
centre-module/src/: AnalogueInput.cpp  DigitalInput.cpp  FightStick.cpp  Main.cpp  Systems.cpp  TinyUSBCallbacks.cpp  digital_switch.c  main.c  usb_descriptors.c
control-board/include/: IControlBoard.h
control-board/include/descriptors/: ControlBoardDescriptors.cpp  ControlBoardDescriptors.h  GamepadEnums.h  HIDDescriptors.h  SwitchDescriptors.h  XInputDescriptors.h
control-board/src/: DigitalInput.cpp  Main.cpp  TinyUSBCallbacks.cpp  TinyUSBDescriptors.cpp
